# AI_Resume-matcher

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Procfile  alembic.ini  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: jobs.py  matching.py  reports.py  resumes.py  tasks.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  job.py  match_result.py  resume.py
backend/app/schemas/: job.py  matching.py  resume.py
backend/app/services/agents/: __init__.py  explain_agent.py  graph.py  jd_agent.py  match_agent.py  resume_agent.py  state.py
backend/app/services/embedding/: __init__.py  embedding_service.py  vector_store.py
backend/app/services/matcher/: __init__.py  llm_matcher.py  rule_matcher.py  semantic_matcher.py  tfidf_matcher.py  weighting.py
backend/app/services/parser/: __init__.py  document_loader.py  language_detector.py  llm_extractor.py  ner_extractor.py  resume_classifier.py  service.py  skill_normalizer.py
backend/app/tasks/: __init__.py  celery_app.py  matching_tasks.py
backend/app/utils/: file_utils.py  llm_client.py  storage.py
backend/data/uploads/: e6cc85e0d34a.txt
backend/tests/: test_agent_graph.py  test_api_jobs.py  test_llm_client.py  test_parser.py  test_resume_classifier.py  test_rule_matcher.py  test_semantic_matcher.py
data/: skill_taxonomy.json
docs/: DEPLOYMENT.md  FIX_PLAN.md
frontend/: .dockerignore  Dockerfile  (+6 more)
(+31 files in other folders)
