[project]
name = "resume-matcher-backend"
version = "1.0.0"
description = "AI-powered resume parsing and job matching system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "redis>=5.1.0",
    "celery[redis]>=5.4.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.1.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "spacy>=3.8.0",
    "gliner>=0.2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "scikit-learn>=1.5.0",
    "jieba>=0.42.1",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.25.0",
    "minio>=7.2.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
